tests/baselines/reference/typeParameterAssignmentWithConstraints.errors.txt
==== tests/cases/compiler/typeParameterAssignmentWithConstraints.ts (1 errors) ====
    function f<A, B extends A>() {
                  ~~~~~~~~~~~
!!! typeParameterAssignmentWithConstraints.ts(1,15): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        var a: A;
        var b: B;
        a = b; // Error: Can't convert B to A
    }